Adjusted css to fix button alignment

--- a/calc.css
+++ b/calc.css
@@ -75,6 +75,8 @@
 .num,
 .operator,
 .equal {
+    display: flex;
+    flex: 1;
     padding: 16px;
     gap: 10px;
     align-items: center;
